--- a/schedule.qmd
+++ b/schedule.qmd
@@ -78,9 +78,9 @@ The schedule below is a guide to what we will be covering throughout the semeste
       An introduction to formulating a supervised machine learning problem. Stating the problem, creating the model, evaluating performance, and operationalizing the solution. </td>
     <td>ISL Ch. 1 + 2.1<br><a href="https://warpwire.duke.edu/w/aWQHAA/">Watch this lecture</a> </td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture02_end_to_end_machine_learning.pdf">[slides]</a><br>
-      <a href="https://github.com/ageron/handson-ml/blob/master/02_end_to_end_machine_learning_project.ipynb">[sample code]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture02_end_to_end_machine_learning.pdf">[slides]</a><br> -->
+      <!-- <a href="https://github.com/ageron/handson-ml/blob/master/02_end_to_end_machine_learning_project.ipynb">[sample code]</a> -->
     </td>
   </tr>
 
@@ -93,8 +93,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 2.2</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture03_bias_variance_tradeoff.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture03_bias_variance_tradeoff.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -104,8 +104,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Assignment #1 Due (at 9pm)</b><br> Probability, Linear Algebra, & Computational Programming</td>
     <td></td>
     <td>
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_1.ipynb">[assignment]</a><br>
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_1_Q12_Example.ipynb">[sample Q12]</a><br>
+      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_1.ipynb">[assignment]</a><br> -->
+      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_1_Q12_Example.ipynb">[sample Q12]</a><br> -->
       <!-- [submit] -->
       <a href="https://www.gradescope.com/">[submit]</a>
     </td>
@@ -120,8 +120,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL Intro of 3, 3.1, and 3.2</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture04_linear_models_1.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture04_linear_models_1.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -136,8 +136,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 3.3 and 3.5</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture05_linear_models_2.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture05_linear_models_2.pdf">[slides]</a> -->
     </td>
   </tr>
   
@@ -150,8 +150,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 4.1, 4.2, and 4.3</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture06_performance_evaluation_1.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture06_performance_evaluation_1.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -164,8 +164,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 5.1 and 5.2</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture07_performance_evaluation_2.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture07_performance_evaluation_2.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -175,10 +175,10 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Assignment #2 Due (at 9pm)</b><br>Supervised Machine Learning Fundamentals</td>
     <td></td>
     <td>
-      <!-- [assignment] <br> -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_2.ipynb">[assignment]</a><br>
-      <!-- [submit] -->
-      <a href="https://www.gradescope.com/">[submit]</a>
+      [assignment] <br>
+      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_2.ipynb">[assignment]</a><br> -->
+      [submit]
+      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
     </td>
   </tr>
 
@@ -190,13 +190,13 @@ The schedule below is a guide to what we will be covering throughout the semeste
       A risk-based framework for determining to operate supervised learning algorithms in practice; choosing ROC operating points through risk-minimization and how application-specific costs associated with different types of errors can be used to determine optimal operating points for classifiers
     </td>
     <td>
-      <!-- Link to reading -->
+      Link to reading
       <!-- <a href="http://canmedia.mheducation.ca/college/olcsupport/lind/5ce/Lind5ce_Ch17_An_Introduction_to_Decision_Theory.pdf">Link to reading</a> -->
-      <a href="https://edstem.org/us/courses/32544/resources?download=24417">Link to reading</a>
+      <!-- <a href="https://edstem.org/us/courses/32544/resources?download=24417">Link to reading</a> -->
     </td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture08_decision_theory.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture08_decision_theory.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -209,8 +209,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 6.1 and 6.2</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture09_regularization.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture09_regularization.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -223,8 +223,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 4.4 and 4.5</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture10_generative_classification.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture10_generative_classification.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -237,8 +237,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 8.1 and 8.2</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture11_trees_and_ensembles.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture11_trees_and_ensembles.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -248,10 +248,10 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Assignment #3 Due (at 9pm)</b><br>Supervised learning model training and evaluation</td>
     <td></td>
     <td>
-      <!-- [assignment] <br> -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_3.ipynb">[assignment]</a><br>
-      <!-- [submit] -->
-      <a href="https://www.gradescope.com/">[submit]</a>
+      [assignment] <br>
+      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_3.ipynb">[assignment]</a><br> -->
+      [submit]
+      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
     </td>
   </tr>
 
@@ -264,8 +264,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL Ch 9: 9.1-9.4</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture12_kernel_methods.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture12_kernel_methods.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -278,8 +278,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>PRML Ch 5: 5.1 </td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture13_neural_networks_1.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture13_neural_networks_1.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -292,8 +292,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>PRML Ch 5: 5.3 (intro), 5.3.1, 5.3.2, and <a href="http://colah.github.io/posts/2015-08-Backprop/">Calculus on Computational Graphs</a></td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture14_neural_networks_2.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture14_neural_networks_2.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -306,8 +306,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>DL Ch 11: Practical Methodology</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture15_deep_learning.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture15_deep_learning.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -328,8 +328,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 6.3, 6.4, 12.1, and 12.2 </td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture16_dimensionality_reduction.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture16_dimensionality_reduction.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -339,11 +339,11 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Assignment #4 Due (at 9pm)</b><br>Neural Networks</td>
     <td></td>
     <td>
-      <!-- [assignment] <br> -->
-      <!-- [submit] -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_4.ipynb">[assignment]</a><br>
-      <a href="https://www.gradescope.com/">[submit]</a><br>
-      <a href="https://github.com/kylebradbury/neural-network-math/raw/master/neural_network_math.pdf">[NN Math Guide]</a>
+      [assignment] <br>
+      [submit]
+      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_4.ipynb">[assignment]</a><br> -->
+      <!-- <a href="https://www.gradescope.com/">[submit]</a><br> -->
+      <!-- <a href="https://github.com/kylebradbury/neural-network-math/raw/master/neural_network_math.pdf">[NN Math Guide]</a> -->
     </td>
   </tr>
 
@@ -356,8 +356,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 12.4</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture16_dimensionality_reduction.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture16_dimensionality_reduction.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -367,10 +367,10 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Project Proposal Due (at 9pm)</b></td>
     <td></td>
     <td>
-      <!-- [project] <br> -->
-      <!-- [submit] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html#proposal">[project]</a><br>
-      <a href="https://www.gradescope.com/">[submit]</a>
+      [project] <br>
+      [submit]
+      <!-- <a href="https://kylebradbury.github.io/ids705/project.html#proposal">[project]</a><br> -->
+      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
     </td>
   </tr>
 
@@ -391,8 +391,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>DM Ch 7 (<a href="https://www-users.cs.umn.edu/~kumar001/dmbook/ch7_clustering.pdf">link</a>): Intro, 7.1 and 7.2</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture18_density_estimation_and_clustering.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture18_density_estimation_and_clustering.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -405,8 +405,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
    <td>DM Ch 7 (<a href="https://www-users.cs.umn.edu/~kumar001/dmbook/ch7_clustering.pdf">link</a>): 7.3 and 7.4</td>
    <td>
-     <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture19_clustering_2.pdf">[slides]</a>
+     [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture19_clustering_2.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -427,8 +427,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>RL Ch 1: 1.1-1.6; Ch 2: 2.1-2.5</td>
     <td>
-      <!-- [slides]  -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture20_reinforcement_learning_1.pdf">[slides]</a>
+      [slides] 
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture20_reinforcement_learning_1.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -441,8 +441,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>RL Ch 3</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture21_reinforcement_learning_2.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture21_reinforcement_learning_2.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -452,10 +452,10 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Assignment #5 Due (at 9pm)</b> <br> Kaggle Competition and Unsupervised Learning<br><b>Kaggle Competition Ends 9pm on Sun Mar 24</b></td>
     <td></td>
     <td>
-      <!-- [assignment] <br> -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_5.ipynb">[assignment]</a><br>
-      <!-- [submit] -->
-      <a href="https://www.gradescope.com/">[submit]</a>
+      [assignment] <br>
+      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_5.ipynb">[assignment]</a><br> -->
+      [submit]
+      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
     </td>
   </tr>
 
@@ -468,8 +468,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>RL Ch 4</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture22_reinforcement_learning_3.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture22_reinforcement_learning_3.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -479,10 +479,10 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Draft Final Project Report Due (at 9pm)</b></td>
     <td></td>
     <td>
-      <!-- [project] <br> -->
-      <!-- [submit] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html#finalreport">[project]</a><br>
-      <a href="https://www.gradescope.com/">[submit]</a>
+      [project] <br>
+      [submit]
+      <!-- <a href="https://kylebradbury.github.io/ids705/project.html#finalreport">[project]</a><br> -->
+      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
     </td>
   </tr>
 
@@ -495,8 +495,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>RL Ch 5: 5.1-5.3</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture23_reinforcement_learning_4.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture23_reinforcement_learning_4.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -517,8 +517,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>None</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture24_special_topics.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture24_special_topics.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -531,8 +531,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>None</td>
     <td>
-      <!-- [slides] -->
-      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture25_machine_learning_frontiers.pdf">[slides]</a>
+      [slides]
+      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture25_machine_learning_frontiers.pdf">[slides]</a> -->
     </td>
   </tr>
 
@@ -544,8 +544,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td></td>
     <td>
-      <!-- [project] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html">[project]</a>
+      [project]
+      <!-- <a href="https://kylebradbury.github.io/ids705/project.html">[project]</a> -->
     </td>
   </tr>
 
@@ -555,10 +555,10 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Final Project Report Due (at 9pm)</b></td>
     <td></td>
     <td>
-      <!-- [project] <br> -->
-      <!-- [submit] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html#finalreport">[project]</a><br>
-      <a href="https://www.gradescope.com/">[submit]</a>
+      [project] <br>
+      [submit]
+      <!-- <a href="https://kylebradbury.github.io/ids705/project.html#finalreport">[project]</a><br> -->
+      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
     </td>
   </tr>
 
@@ -568,8 +568,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Final Project Peer Evaluation Due (at 9pm)</b></td>
     <td></td>
     <td>
-      <!-- [project] -->
-      <a href="https://kylebradbury.github.io/ids705/project.html#peerevaluation">[project]</a><br>
+      [project]
+      <!-- <a href="https://kylebradbury.github.io/ids705/project.html#peerevaluation">[project]</a><br> -->
       <!-- [submit via emailed link] -->
     </td>
   </tr>
@@ -580,9 +580,9 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>(Optional) Assignment #6 Due (at 9pm)</b><br>Reinforcement learning</td>
     <td></td>
     <td>
-      <!-- [assignment] -->
-      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_6.ipynb">[assignment]</a><br>
-      <a href="https://www.gradescope.com/">[submit]</a>
+      [assignment]
+      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_6.ipynb">[assignment]</a><br> -->
+      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
     </td>
   </tr>
 ```
