--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -18,17 +18,19 @@ number-sections: false
 - **Ed Discussions**: Announcements, Q&A on course content (assignments, quizzes, grades), ALL course communications
 - **Gradescope**: Quizzes, assignments, and project submission & feedback
 - **Schedule**: Schedule of class topics and deliverables
+- **Canvas**: Posted grades
 
 ### Textbooks
-Each book is available free online:
+A version of each book is available free online:
 
 - [**An Introduction to Statistical Learning with Python**](https://www.statlearning.com/) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani, 2013.
+- [**Understanding Deep learning**](https://udlbook.github.io/udlbook/) by Simon Prince, 2023.
 - [**Pattern Recognition and Machine Learning**](https://www.microsoft.com/en-us/research/publication/pattern-recognition-machine-learning/) by Christopher Bishop, 2006.
 - [**Deep Learning**](https://www.deeplearningbook.org/) by Ian Goodfellow, Yoshua Bengio, and Aaron Courville, 2016.
 - [**Reinforcement Learning: An Introduction**](http://incompleteideas.net/book/the-book-2nd.html), by Richard Sutton and Andrew Barto, 2018.
 
 ### Assignments & Grading
-Assignments, projects, & quizzes: Assignments and projects details are posted on the course syllabus. For expectations and instructions on the assignments, see the Assignment Instructions. Quizzes are found on Gradescope.
+Assignments, projects, & quizzes: Assignments and projects details are posted on the course syllabus. For expectations and instructions on the assignments, see the Assignment Instructions. Quizzes are found on Gradescope and are due prior to the start of the lecture for which they're titled (i.e. the Lecture 3 Quiz is due by the start of Lecture 3).
 
 #### Grading:
 - 55% Assignments (5, each worth ~11%)
@@ -41,14 +43,6 @@ This course moves quickly, so having a firm grasp on prerequisites is important.
 - Programming: Fundamentals of Python programming.
 - Mathematics: Calculus and linear algebra.
 - Statistics: Introductory probability and statistics.
-
-### Software and Hardware Tools
-**Programming language**: We will use Python 3.x. The Anaconda distribution is recommended and comes with the most common packages. Python continues to be an one of the top programming languages and the rich packages in the language make it an excellent choice for machine learning. In particular the Python ecosystem of packages makes it a natural choice for ML including core numerical programming and plotting libraries like numpy, scipy, matplotlib, and pandas as well as excellent packages for machine learning algorithm development and statistical modeling including TensorFlow, Pytorch, Keras, Scikit-Learn.
-
-**Development environments**: Jupyter lab or Jupyter notebook will be appropriate for most class assignments. We highly encourage you to use Visual Studio Code or Spyder are for larger projects, in particular due to the debugging capabilities. There are many configurations that may work for you, but consider branching out to some of these other tools as well.
-
-**Graphics processing units (GPUs)**: GPUs are the workhorses of many modern machine learning algorithms, especially any that involve neural network-based architectures. There will be a small number of assignments that will require additional computation from that of GPUs. For these, we will use Google Colab, which is a free notebook environment that enables access to cloud resources including GPUs. For longer sessions before timeouts, greater RAM, and better GPUs you can optionally upgrade to Colab Pro.
-
 
 ## Course Policies
 ### Academic dishonesty
@@ -66,11 +60,13 @@ Attending class is a vital component of the course as it is one of the multiple 
 ### Sick absences
 To keep the university community as safe and healthy as possible, please do not come to class if you have cold symptoms. Please inform me of your absence and plan to complete any missed work. Students who encounter short- and long-term medical issues or instances of personal distress or emergency can seek academic support if needed. Recordings of the class will be available for excused absences.
 
-### Accommodations
+### Accommodations and accessibility
 If you need special accommodations due to physical or learning disabilities, medical needs, religious practices, or other reasons, please inform us as soon as possible so we can work to accommodate those needs.
 
+If you are a student with a disability and need accommodations for this class, please register with the [Student Disability Access Office](https://access.duke.edu/students) (SDAO) and provide them with documentation of your disability. SDAO will work with you to determine what accommodations are appropriate for your situation. Please note that accommodations are not retroactive and disability accommodations cannot be provided until a Faculty Accommodation Letter has been given to your instructor. Please contact SDAO for more information: sdao@duke.edu or [](access.duke.edu).
+
 ### Late Submissions
-Assignments and projects are due in class by the start of class on the date posted. Late deliverables will ONLY be accepted at the discretion of the instructor. Any late assignments will result in a reduction of 5 points off the grade per day late. Course projects will not be accepted after the deadline. Quizzes will not be accepted after the deadline. While quizzes cannot be made up since the answers are discussed, the lowest two quizzes will be dropped at the end of the semester for each student to accommodate necessary absences and days when we're off our game. Please reach out to the TA's or instructor as early as possible to request any special accommodations.
+Assignments and projects are due in class by the start of class on the date posted. Late deliverables will ONLY be accepted at the discretion of the instructor. Late Assignments will result in a reduction of 5 points off the grade per day late. Course projects will not be accepted after the deadline. Quizzes will not be accepted after the deadline. While quizzes cannot be made up since the answers are discussed, the lowest two quizzes will be dropped at the end of the semester for each student to accommodate necessary absences and to account for days when we're off our game. Please reach out to the TA's or instructor as early as possible to request any special accommodations.
 
 ### Collaboration
 
@@ -79,6 +75,9 @@ There will be three modes of collaboration ranging from fully-collaborative grou
 - Mode 1: Team-based Assignment. Collaboration is expected with every member of the team contributing to a single deliverable. **Applies to the Project**
 - Mode 2: Individual Assignment – Collaboration Permitted. Students hand in *individual* work, but they may work with others if they provide citations of the help they received, such as a list of people who assisted/collaborated with them to produce the final product. Duplication or copying is not permissible, even in part, and constitutes a breach of the honor code. **Applies to Assignments**
 - Mode 3: Individual Assignment – No Collaboration Permitted. Students hand in individual work that is completed entirely independent of any discussion or help from other students. Clarifying questions to teaching assistants and instructors are both permissible and encouraged. **Applies to Quizzes**
+
+### Rules for recording course content
+Student recording recordings of lectures must be permitted by the instructor prior to recording and shall be for private study only. Such recordings shall not be distributed to anyone else without authorization by the instructor whose lecture has been recorded. However, the instructor may arrange through the Office of Information Technology to make recorded lectures available to students enrolled in the class on such terms and conditions as he or she prescribes. Redistribution of recorded lectures is prohibited. Unauthorized distribution is a cause for disciplinary action by the Judicial Board. The full policy on recoding of lectures falls under the Duke University Policy on Intellectual Property Rights, available here.
 
 ## The use of Artificial Intelligence
 
@@ -94,7 +93,7 @@ Commercial AI tools have significant and sometimes difficult-to-spot limitations
 
 There are a number of ways that AI tools can be helpful:
 
-- As a way of detecting spelling and grammar issues (such as with grammarly)
+- As a way of detecting spelling and grammar issues (such as with Grammarly)
 - As a way of identifying possible ways to structure writing (although NOT to do the writing for you)
 - As a way of brainstorming ideas (keeping in mind that what is generated by the AI may be incorrect or misleading)
 
@@ -103,23 +102,15 @@ In this class, the use of AI tools is acceptable WITH CITATION. An appropriate c
 1. What AI tool you used (e.g. ChatGPT)
 2. How you used it, specifying prompts used (e.g. I checked my writeup for clarity with the prompt, "Review this text {} and improve its clarity")
 
-At the end of the day, **you are responsible for the correctness** of everything that you submit, regardless of whether there was an AI tool used in its generation.
-
-### Accessibility
-In addition to accessibility issues experienced during the typical academic year, I recognize that remote learning may present additional challenges. Students may be experiencing unreliable wi-fi, lack of access to quiet study spaces, varied time-zones, or additional responsibilities while studying at home. If you are experiencing these or other difficulties, please contact me to discuss possible accommodations.
-
-### Rules for video recording course content
-Student recording recordings of lectures must be permitted by the instructor and shall be for private study only. Such recordings shall not be distributed to anyone else without authorization by the instructor whose lecture has been recorded. However, the instructor may arrange through the Office of Information Technology to make recorded lectures available to students enrolled in the class on such terms and conditions as he or she prescribes. Redistribution of recorded lectures is prohibited. Unauthorized distribution is a cause for disciplinary action by the Judicial Board. The full policy on recoding of lectures falls under the Duke University Policy on Intellectual Property Rights, available here.
+At the end of the day **you are responsible for the correctness** of everything that you submit, regardless of whether there was an AI tool used in its generation.
 
 ## Mental Health and Wellness Resources
-If your mental health concerns and/or stressful events negatively affect your daily emotional state, academic performance, or ability to participate in your daily activities, many resources are available to you, including ones listed below. Duke encourages all students to access these resources, particularly as we navigate the transition and emotions associated with this time. Duke Student Government has worked with DukeReach and student advocates to create the Fall 2020 “Two-Click Support” Form, and Duke Reach has expanded its drop in hours as well.
+Student mental health and wellness are of primary importance at Duke, and the university offers resources to support students in managing daily stress and self- care.
 
-- DukeReach Provides comprehensive outreach services to identify and support students in managing all aspects of wellbeing. If you have concerns about a student's behavior or health visit the website for resources and assistance.
-- Counseling and Psychological Services (CAPS) CAPS services include individual, group, and couples counseling services, health coaching, psychiatric services, and workshops and discussions. (919) 660-1000
-- Blue Devils Care A convenient and cost-effective way for Duke students to receive 24/7 mental health support through TalkNow.
+If your mental health concerns or stressful events negatively affect your daily emotional state, academic performance, or ability to participate in your daily activities, many resources are available to help you through difficult times. Duke offers several resources for all students to seek assistance and to nurture daily habits that support overall well-being, some of which are listed below:
 
-Managing daily stress and self-care are also important to well-being. Duke offers several resources for students to both seek assistance on coursework and improve overall wellness, some of which are listed below. Please visit this site to learn more about:
-
-- The Academic Resource Center: (919) 684-5917, theARC@duke.edu
-- DuWell: (919) 681-8421, duwell@studentaffairs.duke.edu
-- WellTrack
+- [DuWell](https://students.duke.edu/wellness/duwell/), (919) 681-8421. DuWell provides Moments of Mindfulness (stress management and resilience building) and meditation programming (Koru workshop) to assist students in developing a daily emotional well-being practice. All are welcome and no experience necessary.
+- [DukeReach](https://students.duke.edu/wellness/dukereach/). DukeReach provides comprehensive outreach services to identify and support students in managing all aspects of well-being.
+- [Counseling and Psychological Services (CAPS)](https://students.duke.edu/wellness/caps/), (919) 660-1000. CAPS services include individual and group counseling services, psychiatric services, and workshops. CAPS also provides referral to off-campus
+resources for specialized care.
+• [TimelyCare](http://bluedevilscare.duke.edu/) (formerly known as Blue Devils Care). An online platform that is a convenient, confidential, and free way for Duke students to receive 24/7 mental health support through TalkNow and scheduled counseling.
