amended assignment instructions

--- a/notebooks/assignment_instructions.ipynb
+++ b/notebooks/assignment_instructions.ipynb
@@ -24,6 +24,7 @@
     "3. **Create a PDF document of your notebook**. There are a few ways to do this. Please see the guide below.\n",
     "4. **Check that your content is easily legible prior to submission**. Look over your PDF before you submit it. If we cannot read it, or parts are missing, we cannot grade it, and no credit will be given for anything we cannot read. \n",
     "5. **Submit your pdf by the deadline on gradescope**. Any assignments received after the deadline will be treated as late. Please [see this video](https://youtu.be/KMPoby5g_nE) for how to submit your assignment on gradescope. The submission link is here: [https://www.gradescope.com/](https://www.gradescope.com/)\n",
+    "6. **Assign the respective pages to each question**. When you submit your assignment on Gradescope, you will be asked to assign pages of your PDF to each question accordingly. Please remember, as stated in item 4, if we cannot find your answer, we cannot grade it.\n",
     "\n",
     "See below for a checklist for your document before you submit."
    ]
