updated assignment 1 link to instructions

--- a/assignments/Assignment_1.ipynb
+++ b/assignments/Assignment_1.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instructions for all assignments can be found [here](https://github.com/kylebradbury/ids705/blob/master/assignments/_Assignment%20Instructions.ipynb), and are also linked to from the course syllabus.\n",
+    "Instructions for all assignments can be found [here](https://kylebradbury.github.io/ids705/notebooks/assignment_instructions.html), and are also linked to from the course syllabus.\n",
     "\n",
     "Total points in the assignment add up to 90; an additional 10 points are allocated to professionalism and presentation quality."
    ]
