--- a/assignments/Assignment_1.ipynb
+++ b/assignments/Assignment_1.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Version 2: Updated 1/14/24 (Question 4 revised)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## *YOUR FULL NAME HERE*\n",
     "Netid: Your netid here\n",
     "\n",
@@ -148,9 +155,9 @@
    "source": [
     "## 4\n",
     "**[6 points]** \n",
-    "You are given the training data below and asked to determine the probability that a sample of $x=0.54$ comes from class 1, or equivalently, $P(Y=1|X=0.54)$. The feature,, $x$ can take on values between 0 and 1.\n",
+    "You are given the training data below and asked to determine the probability that a sample of $x=0.54$ comes from class 1, or equivalently, $P(Y=1|X=0.54)$. The feature, $x$, can take on real values between 0 and 1.\n",
     "\n",
-    "| $x$ value range | Negative data in the range ($x$,$y=0$) | Positive data in the range ($x$,$y=1$) |\n",
+    "| $x$ value range | Negative data samples ($x$,$y=0$) | Positive data samples ($x$,$y=1$) |\n",
     "| -- | -- | -- |\n",
     "| 0.0 - 0.1 | (0.05,0),(0.07,0)|   None   |\n",
     "| 0.1 - 0.2 | (0.11,0),(0.13,0),(0.19,0) | (0.14,1) |\n",
@@ -165,7 +172,30 @@
     "\n",
     "Note: *You don't need to use these data directly*, but this provides an example of how the data could be distributed to form the empirical likelihoods and priors shown below.\n",
     "\n",
-    "Recall Bayes' Rule which computes the poster distribution, $P(Y|X)$, based on the likelihood of the data conditioned on the class of the samples, $P(X|Y=y)$, the prior $P(Y)$ which is essentially the distribution of the class labels across all the data, and the evidence $P(X)$ which is the distribution of the features, $X$, regardless of class labels."
+    "You're likely familiar with Bayes' Rule, which for discrete random variables states that:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation*}\n",
+    "P(Y|X)= \\frac{P(X|Y)P(Y)}{P(X)}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, $P(X) = \\sum_y P(X|Y=y)P(Y=y)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our case, however, the variable Y is discrete but the variable X is continuous, so we express this function a bit differently. We can compute the poster probability, $P(Y|X)$, based on the likelihood function of the data conditioned on the class of the samples, $f_{X|Y}(x,y)$, the prior $P(Y)$ which is essentially the distribution of the class labels across all the data, and the evidence $f_X(x)$ which is the probability distribution function of the features, $X$, regardless of class labels:"
    ]
   },
   {
@@ -173,32 +203,32 @@
    "metadata": {},
    "source": [
     "\n",
-    "\\begin{equation}\n",
-    "P(Y|X)= \\frac{P(X|Y)P(Y)}{P(X)}\n",
-    "\\end{equation}"
+    "\\begin{equation*}\n",
+    "P(Y=y|X=x)= \\frac{f_{X|Y}(x,y)P(Y=y)}{f_X(x)}\n",
+    "\\end{equation*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, note that P(X) can alternatively be computed in this case as:"
+    "Also, note that $f_X(x)$ can be computed in this case (due to the discrete Y values of 0 and 1) as:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{equation}\n",
-    "P(X) = P(X|Y=0)P(Y=0) + P(X|Y=1)P(Y=1)\n",
-    "\\end{equation}"
+    "\\begin{equation*}\n",
+    "f_X(x) = f_{X|Y}(x,y=0)P(Y=0) + f_{X|Y}(x,y=1)P(Y=1)\n",
+    "\\end{equation*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below are the prior and the likelihood functions based on the dataset above:"
+    "Below are the prior and the likelihood functions based on the dataset above. Note that here we use $P(\\cdot)$ to note a probability and $f(\\cdot)$ to note a probability distribution function."
    ]
   },
   {
@@ -219,8 +249,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. What is $P(X=0.54|Y=1)P(Y=1)$?\n",
-    "2. What is $P(X=0.54)$?\n",
+    "1. What is $f_{X|Y}(x=0.54,y=1)P(Y=1)$?\n",
+    "2. What is $f_X(x=0.54)$?\n",
     "3. What is $P(Y=1|X=0.54)$?"
    ]
   },
