--- a/schedule.qmd
+++ b/schedule.qmd
@@ -174,8 +174,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Assignment #2 Due (at 9pm)</b><br>Supervised Machine Learning Fundamentals</td>
     <td></td>
     <td>
-      [assignment] <br>
-      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_2.ipynb">[assignment]</a><br> -->
+      <!-- [assignment] <br> -->
+      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_2.ipynb">[assignment]</a><br>
       [submit]
       <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
     </td>
