--- a/schedule.qmd
+++ b/schedule.qmd
@@ -163,8 +163,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>ISL 5.1 and 5.2</td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture07_performance_evaluation_2.pdf">[slides]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture07_performance_evaluation_2.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -176,8 +176,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       <!-- [assignment] <br> -->
       <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_2.ipynb">[assignment]</a><br>
-      [submit]
-      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
+      <!-- [submit] -->
+      <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
 
