--- a/schedule.qmd
+++ b/schedule.qmd
@@ -249,7 +249,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
       <!-- [assignment] <br> -->
       <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_3.ipynb">[assignment]</a><br>
       [submit]
-      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
+      <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
 
@@ -339,9 +339,9 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       [assignment] <br>
       [submit]
-      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_4.ipynb">[assignment]</a><br> -->
-      <!-- <a href="https://www.gradescope.com/">[submit]</a><br> -->
-      <!-- <a href="https://github.com/kylebradbury/neural-network-math/raw/master/neural_network_math.pdf">[NN Math Guide]</a> -->
+      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_4.ipynb">[assignment]</a><br>
+      <a href="https://www.gradescope.com/">[submit]</a><br>
+      <a href="https://github.com/kylebradbury/neural-network-math/raw/master/neural_network_math.pdf">[NN Math Guide]</a>
     </td>
   </tr>
 
