posted latest slides

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -304,8 +304,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>DL Ch 11: Practical Methodology</td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture15_deep_learning.pdf">[slides]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture15_deep_learning.pdf">[slides]</a>
     </td>
   </tr>
 
