posted latest slides

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -389,8 +389,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>DM Ch 7 (<a href="https://www-users.cs.umn.edu/~kumar001/dmbook/ch7_clustering.pdf">link</a>): Intro, 7.1 and 7.2</td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture18_density_estimation_and_clustering.pdf">[slides]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture18_density_estimation_and_clustering.pdf">[slides]</a>
     </td>
   </tr>
 
