posted slides and A6

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -466,8 +466,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>RL Ch 4</td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture22_reinforcement_learning_3.pdf">[slides]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture22_reinforcement_learning_3.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -578,9 +578,9 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>(Optional) Assignment #6 Due (at 9pm)</b><br>Reinforcement learning</td>
     <td></td>
     <td>
-      [assignment]
-      <!-- <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_6.ipynb">[assignment]</a><br> -->
-      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
+      <!-- [assignment] -->
+      <a href="https://github.com/kylebradbury/ids705/blob/main/assignments/Assignment_6.ipynb">[assignment]</a><br>
+      <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
 ```
