--- a/schedule.qmd
+++ b/schedule.qmd
@@ -477,10 +477,10 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td><b>Draft Final Project Report Due (at 9pm)</b></td>
     <td></td>
     <td>
-      [project] <br>
-      [submit]
-      <!-- <a href="https://kylebradbury.github.io/ids705/project.html#finalreport">[project]</a><br> -->
-      <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
+      <!-- [project] <br> -->
+      <!-- [submit] -->
+      <a href="https://kylebradbury.github.io/ids705/project.html#finalreport">[project]</a><br>
+      <a href="https://www.gradescope.com/">[submit]</a>
     </td>
   </tr>
 
@@ -515,8 +515,8 @@ The schedule below is a guide to what we will be covering throughout the semeste
     </td>
     <td>None</td>
     <td>
-      [slides]
-      <!-- <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture24_special_topics.pdf">[slides]</a> -->
+      <!-- [slides] -->
+      <a href="https://github.com/kylebradbury/ids705/raw/main/lectures/lecture24_special_topics.pdf">[slides]</a>
     </td>
   </tr>
 
@@ -543,7 +543,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td></td>
     <td>
       [project]
-      <!-- <a href="https://kylebradbury.github.io/ids705/project.html">[project]</a> -->
+      <a href="https://kylebradbury.github.io/ids705/project.html">[project]</a>
     </td>
   </tr>
 
@@ -555,7 +555,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td>
       [project] <br>
       [submit]
-      <!-- <a href="https://kylebradbury.github.io/ids705/project.html#finalreport">[project]</a><br> -->
+      <a href="https://kylebradbury.github.io/ids705/project.html#final-report">[project]</a><br>
       <!-- <a href="https://www.gradescope.com/">[submit]</a> -->
     </td>
   </tr>
@@ -567,7 +567,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
     <td></td>
     <td>
       [project]
-      <!-- <a href="https://kylebradbury.github.io/ids705/project.html#peerevaluation">[project]</a><br> -->
+      <a href="https://kylebradbury.github.io/ids705/project.html#peer-evaluation">[project]</a><br>
       <!-- [submit via emailed link] -->
     </td>
   </tr>
