updated project timeline

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -549,7 +549,7 @@ The schedule below is a guide to what we will be covering throughout the semeste
 
   <tr class="table-warning">
     <td><b>Deliverable</b></td>
-    <td class="date">Wednesday <br> Apr 17 </td>
+    <td class="date">Sunday <br> Apr 21 </td>
     <td><b>Final Project Report Due (at 9pm)</b></td>
     <td></td>
     <td>
@@ -562,13 +562,13 @@ The schedule below is a guide to what we will be covering throughout the semeste
 
   <tr class="table-warning">
     <td><b>Deliverable</b></td>
-    <td class="date">Thursday <br> Apr 18</td>
+    <td class="date">Monday <br> Apr 22</td>
     <td><b>Final Project Peer Evaluation Due (at 9pm)</b></td>
     <td></td>
     <td>
       [project]
       <a href="https://kylebradbury.github.io/ids705/project.html#peer-evaluation">[project]</a><br>
-      <!-- [submit via emailed link] -->
+      [submit via emailed link]
     </td>
   </tr>
 
