--- a/contacts.qmd
+++ b/contacts.qmd
@@ -5,6 +5,12 @@ toc: false
 number-sections: false
 ---
 
+::: {.callout-warning}
+## Caution - Archived Course
+
+This is an archived website for a past offering of IDS705. Please visit [this website](https://kylebradbury.github.io/ids705/) for the latest semester.
+:::
+
 ::: {.callout-tip}
 ## Contact Us & Office Hourse
 
