--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -6,6 +6,12 @@ toc-expand: 3
 number-sections: false
 ---
 
+::: {.callout-warning}
+## Caution - Archived Course
+
+This is an archived website for a past offering of IDS705. Please visit [this website](https://kylebradbury.github.io/ids705/) for the latest semester.
+:::
+
 ## Basic Logistics
 
 ::: {.callout-note}
